# Canonical-Huffman-Archiver

./: CMakeLists.txt  Makefile
scripts/: build.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt
